First version calculation controller